--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,9 @@
-deepmultilingualpunctuation==1.0.1
-faster_whisper==0.10.0
-nemo_toolkit==1.21.0
-nltk==3.8.1
-omegaconf==2.3.0
-openai==1.12.0
-pyannote.audio==3.1.0
-pyannote.core==5.0.0
-pyannote.database==5.0.1
-pyannote.metrics==3.2.1
-pyannote.pipeline==3.0.1
-pydub==0.25.1
-pytest==8.0.0
-pytube==15.0.0
-torch==2.0.1
-wget==3.2
-whisperx==3.1.1
+pytube
+openai
+wget
+nemo_toolkit[asr]==1.21.0
+transformers>=4.26.1
+git+https://github.com/m-bain/whisperX.git@a5dca2cc65b1a37f32a347e574b2c56af3a7434a
+git+https://github.com/facebookresearch/demucs#egg=demucs
+deepmultilingualpunctuation
+
