--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,7 @@ openai
 wget
 nemo_toolkit[asr]==1.21.0
 transformers>=4.26.1
-git+https://github.com/m-bain/whisperX.git@a5dca2cc65b1a37f32a347e574b2c56af3a7434a
+git+https://github.com/m-bain/whisperX.git --upgrade
 git+https://github.com/facebookresearch/demucs#egg=demucs
 deepmultilingualpunctuation
 
